# labelator

./: LICENSE  README.md  all_genes.pkl  api.py  api_scanvi.py  asap_dataprep.py  celltype_marker_table.csv  celltype_marker_table012424.csv  celltype_marker_table2.csv  click_api.py  click_scanvi.py  data  environment.yml  example_dataprep.py  fix_emb_outputs.sh  grp_genes.pkl  grp_genes_pr.pkl  labelator.py  labelator.sh  labelator_api.py  labelator_query.sh  labelator_query_AB.sh  labelator_test.sh  labelator_train.sh  labelator_tt.sh  lbl8r.yml  lbl8r_cuda12.4.yml  lbl8r_nb.yml  lbl8r_nb_cuda12.4.yml  lbl8r_py12.yml  new_markers.py  new_taxonomy_table.csv  pyproject.toml  query_labelator.py  requirements.txt  scib2.yml  scib3.yml  scib4.yml  scib_nb.yml  scib_nb2.yml  (+10 more)
e2e_models/: xgb_raw_cnt.model  xgb_scVInorm_cnt.model
labelator/: helper.py  labelator.py  util.py  workflow_summary.py
lbl8r/: __get.py  __init__.py  _artifacts.py  _constants.py  _get.py  _helper.py  _load.py  _models.py  _modules.py  _query.py  constants.py  infer.py  labelator.py  lbl8r  lbl8r.py  mac_get.py  modules.py  notes.py  pca.py  vae.py  xgb.py
nbs/: asap_dl_snips.ipynb  e2e_lbl8r.ipynb  e2e_scanvi.ipynb  e2e_scanvi_nb.ipynb  e2e_xgb.ipynb  jahscarches_scvi_tools.py  labelator  labelator_datprep.ipynb  lbl8r.ipynb  lbl8r_boilerplate.ipynb  lbl8r_exp_pca.ipynb  lbl8r_make_adatas.ipynb  lbl8r_pca.ipynb  lbl8r_xgb.ipynb  nbs2script.ipynb  nbs2scrpt.py  process_xyl.ipynb  rpy2_graveyard.ipynb  scanvi_surgery_pipeline.ipynb  test_0.ipynb  test_1.ipynb  test_3.ipynb  test_4.ipynb  test_5.ipynb  (+5 more)
(+151 files in other folders)
